update unit test user and auth
