# storage/api-docs/api-docs.json
@@ -235,6 +235,289 @@
                     }
                 }
             }
+        },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "get all User",
+                "description": "get all User",
+                "operationId": "get all User",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "roles": {
+                                        "type": "integer"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "hai",
+                                    "email": "prod@gmail.com",
+                                    "roles": 1,
+                                    "password": "password"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": [
+                                        {
+                                            "name": "string",
+                                            "email": "string",
+                                            "roles": [
+                                                {
+                                                    "name": "admin",
+                                                    "permissions": [
+                                                        {
+                                                            "name": "create_user"
+                                                        },
+                                                        {
+                                                            "name": "update_user"
+                                                        },
+                                                        {
+                                                            "name": "read_user"
+                                                        },
+                                                        {
+                                                            "name": "delete_user"
+                                                        }
+                                                    ]
+                                                }
+                                            ],
+                                            "login_at": "string",
+                                            "logout_at": "string"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "create User",
+                "description": "create User",
+                "operationId": "create User",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "roles": {
+                                        "type": "integer"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "hai",
+                                    "email": "prod@gmail.com",
+                                    "roles": 1,
+                                    "password": "password"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": [
+                                        {
+                                            "name": "string",
+                                            "email": "string",
+                                            "roles": [
+                                                {
+                                                    "name": "admin",
+                                                    "permissions": [
+                                                        {
+                                                            "name": "create_user"
+                                                        },
+                                                        {
+                                                            "name": "update_user"
+                                                        },
+                                                        {
+                                                            "name": "read_user"
+                                                        },
+                                                        {
+                                                            "name": "delete_user"
+                                                        }
+                                                    ]
+                                                }
+                                            ],
+                                            "login_at": "string",
+                                            "logout_at": "string"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/{id}": {
+            "put": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "update User",
+                "description": "update User",
+                "operationId": "update User",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "identity",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "roles": {
+                                        "type": "integer"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "name": "hai",
+                                    "email": "prod@gmail.com",
+                                    "roles": 1,
+                                    "password": "password"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": [
+                                        {
+                                            "name": "string",
+                                            "email": "string",
+                                            "roles": [
+                                                {
+                                                    "name": "admin",
+                                                    "permissions": [
+                                                        {
+                                                            "name": "create_user"
+                                                        },
+                                                        {
+                                                            "name": "update_user"
+                                                        },
+                                                        {
+                                                            "name": "read_user"
+                                                        },
+                                                        {
+                                                            "name": "delete_user"
+                                                        }
+                                                    ]
+                                                }
+                                            ],
+                                            "login_at": "string",
+                                            "logout_at": "string"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "delete User",
+                "description": "delete User",
+                "operationId": "delete User",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "identity",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {},
+                                "example": {
+                                    "data": [
+                                        {
+                                            "name": "null",
+                                            "email": "null",
+                                            "roles": [],
+                                            "login_at": "null",
+                                            "logout_at": "null"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
